--- a/app.xaml
+++ b/app.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:LoginRegister"
-             xmlns:fa="http://schemas.fontawesome.io/icons/"
+             xmlns:fa="http://schemas.fontawesome.io/icons/" <--Download FontAwesome.WPF Nuget.org-->
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         
